<resources>
    <string name="app_name">AllMight</string>

    <!-- Global -->
    <string name="exercice_title">Exercice</string>
    <string name="workout_title">Programme</string>
    <string name="add_exercise_workout_title">Programme : %s</string>
    <string name="test">Test</string>

    <!-- Settings -->

    <string name="include_settings_chip_all">Tous</string>
    <string name="include_settings_chip_active">Actif</string>
    <string name="include_settings_chip_inactive">Inactif</string>

    <!-- error -->
    <string name="error_name_empty">La saisie d\'un nom est obligatoire</string>

    <!-- Default string -->
    <string name="manage">Gérer</string>
    <string name="default_workout"></string>
    <string name="default_exercise"></string>

    <!-- Choose workout-->
    <string name="choose_workout_exercice_title">%1d Exercices</string>


    <!-- Workout Add Exercise-->
    <string name="wkaddex_info_selected">Nombre d\'exercice dans le programme : %d</string>
    <string name="wkaddex_info_global">Sélectionner les exercices à ajouter au programme.</string>
    <string name="wkaddex_chip_all">Tous</string>
    <string name="wkaddex_chip_selected">Sélectionné %d</string>
    <string name="wkaddex_search_hint">Rechercher par nom ou type</string>
    <string name="list_wkaddex_rep">Series : %1d</string>
    <string name="list_wkaddex_series">Rep : %1d</string>

    <!-- Settings home-->
    <string name="home_settings_title">Gérer l\'entrainement</string>
    <string name="home_settings_add">Ajouter</string>
    <string name="home_settings_delete">Supprimer</string>

    <string name="workout_settings_no_data">Aucun programme n\'existe dans cette catégorie.</string>
    <string name="exercise_settings_no_data">Aucun exercice n\'existe dans cette catégorie.</string>

    <string name="detail_workout_settings_no_data">Aucun exercice pour ce programme.</string>

    <!-- Settings details workout & exercise -->
    <string name="details_workout_add">Créer un programme</string>
    <string name="details_settings_title_name">Nom</string>

    <string name="details_exercise_add">Créer un exercice</string>


    <string name="details_exercise_title_series">Nombre de série</string>
    <string name="details_exercise_title_rep">Nombre de répétition</string>

    <string name="details_settings_title_status">Statut</string>
    <string name="details_settings_text_status">Faire apparaitre ce programme ou exercice</string>
    <string name="details_settings_title_type">Type</string>

</resources>
