<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="detailWorkoutSettingsViewModel"
                type="com.mikolove.allmight.views.settings.detail.SettingsDetailWorkoutViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/detail_workout_settings_txt_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/details_workout_add"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@+id/detail_workout_settings_txt_title"
                app:layout_constraintStart_toStartOf="@+id/detail_workout_settings_txt_title"
                app:layout_constraintTop_toBottomOf="@+id/detail_workout_settings_txt_title" />

        <TextView
            android:id="@+id/detail_workout_settings_txt_title_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/details_settings_title_name"
            app:layout_constraintEnd_toStartOf="@+id/detail_workout_settings_txt_status_name"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <EditText
                android:id="@+id/detail_workout_settings_edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@={detailWorkoutSettingsViewModel.workoutWithExercise.workout.name}"
                app:layout_constraintEnd_toEndOf="@+id/detail_workout_settings_txt_title_name"
                app:layout_constraintStart_toStartOf="@+id/detail_workout_settings_txt_title_name"
                app:layout_constraintTop_toBottomOf="@+id/detail_workout_settings_txt_title_name" />

        <TextView
            android:id="@+id/detail_workout_settings_txt_status_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/details_settings_title_status"
            app:layout_constraintEnd_toEndOf="@+id/detail_workout_settings_txt_title"
            app:layout_constraintTop_toTopOf="@+id/detail_workout_settings_txt_title_name" />

        <Switch
            android:id="@+id/detail_workout_settings_switch_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:checked="@={detailWorkoutSettingsViewModel.workoutWithExercise.workout.status}"
            app:layout_constraintBottom_toBottomOf="@+id/detail_workout_settings_edit_name"
            app:layout_constraintEnd_toEndOf="@+id/detail_workout_settings_txt_status_name"
            app:layout_constraintTop_toBottomOf="@+id/detail_workout_settings_txt_status_name" />

        <TextView
            android:id="@+id/detail_workout_settings_txt_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/details_settings_title_type"
            app:layout_constraintEnd_toEndOf="@+id/detail_workout_settings_txt_title"
            app:layout_constraintStart_toStartOf="@+id/detail_workout_settings_edit_name"
            app:layout_constraintTop_toBottomOf="@+id/detail_workout_settings_edit_name" />
        <Spinner
                android:id="@+id/detail_workout_settings_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/detail_workout_settings_txt_type"
                app:layout_constraintStart_toStartOf="@+id/detail_workout_settings_txt_type"
                app:layout_constraintTop_toBottomOf="@+id/detail_workout_settings_txt_type"
                app:setData="@{detailWorkoutSettingsViewModel.listWorkoutType}"
                app:setSelectedData="@={detailWorkoutSettingsViewModel.spinnerWorkoutType}"
                />

        <Button
            android:id="@+id/detail_workout_settings_btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> detailWorkoutSettingsViewModel.onAddClick()}"
            android:text="@string/manage"
            app:layout_constraintEnd_toEndOf="@+id/detail_workout_settings_spinner"
            app:layout_constraintTop_toBottomOf="@+id/detail_workout_settings_spinner" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detail_workout_settings_recycler_view_exercise"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="@{detailWorkoutSettingsViewModel.listVisibility}"
            app:layout_constraintEnd_toEndOf="@+id/detail_workout_settings_spinner"
            app:layout_constraintStart_toStartOf="@+id/detail_workout_settings_txt_exercise_title"
            app:layout_constraintTop_toBottomOf="@+id/detail_workout_settings_btn_add" />

        <TextView
            android:id="@+id/detail_workout_settings_txt_exercise_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/exercice_title"
            app:layout_constraintBottom_toBottomOf="@+id/detail_workout_settings_btn_add"
            app:layout_constraintStart_toStartOf="@+id/detail_workout_settings_spinner"
            app:layout_constraintTop_toTopOf="@+id/detail_workout_settings_btn_add" />

        <TextView
            android:id="@+id/detail_workout_settings_txt_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
            android:layout_marginTop="238dp"
            android:layout_marginEnd="154dp"
            android:layout_marginBottom="258dp"
            android:text="@string/detail_workout_settings_no_data"
            android:visibility="@{detailWorkoutSettingsViewModel.textVisibility}"
            app:layout_constraintBottom_toBottomOf="@+id/detail_workout_settings_recycler_view_exercise"
            app:layout_constraintEnd_toEndOf="@+id/detail_workout_settings_btn_add"
            app:layout_constraintStart_toStartOf="@+id/detail_workout_settings_txt_exercise_title"
            app:layout_constraintTop_toBottomOf="@+id/detail_workout_settings_btn_add" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>