<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="detailExerciseSettingsViewModel"
                type="com.mikolove.allmight.views.settings.detail.SettingsDetailExerciseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/detail_exercise_settings_txt_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/details_exercise_add"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@+id/detail_exercise_settings_txt_title"
                app:layout_constraintStart_toStartOf="@+id/detail_exercise_settings_txt_title"
                app:layout_constraintTop_toBottomOf="@+id/detail_exercise_settings_txt_title" />

        <TextView
                android:id="@+id/detail_exercise_settings_txt_title_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/details_settings_title_name"
                app:layout_constraintEnd_toEndOf="@+id/divider"
                app:layout_constraintStart_toStartOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

        <EditText
            android:id="@+id/detail_exercise_settings_edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={detailExerciseSettingsViewModel.exercise.name}"
            app:layout_constraintEnd_toEndOf="@+id/detail_exercise_settings_txt_title_name"
            app:layout_constraintStart_toStartOf="@+id/detail_exercise_settings_txt_title_name"
            app:layout_constraintTop_toBottomOf="@+id/detail_exercise_settings_txt_title_name" />

        <TextView
            android:id="@+id/detail_exercise_settings_txt_status_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/details_settings_title_status"
            app:layout_constraintEnd_toEndOf="@+id/detail_exercise_settings_edit_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/detail_exercise_settings_edit_name"
            app:layout_constraintTop_toBottomOf="@+id/detail_exercise_settings_spinner_series" />

        <Switch
                android:id="@+id/detail_exercise_settings_switch_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/details_settings_text_status"
                android:checked="@={detailExerciseSettingsViewModel.exercise.status}"
                app:layout_constraintEnd_toEndOf="@+id/detail_exercise_settings_txt_status_name"
                app:layout_constraintStart_toStartOf="@+id/detail_exercise_settings_txt_status_name"
                app:layout_constraintTop_toBottomOf="@+id/detail_exercise_settings_txt_status_name" />

        <TextView
                android:id="@+id/detail_exercise_settings_txt_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/details_settings_title_type"
                app:layout_constraintEnd_toEndOf="@+id/detail_exercise_settings_switch_status"
                app:layout_constraintStart_toStartOf="@+id/detail_exercise_settings_txt_status_name"
                app:layout_constraintTop_toBottomOf="@+id/detail_exercise_settings_switch_status" />
        <Spinner
                android:id="@+id/detail_exercise_settings_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/detail_exercise_settings_txt_type"
                app:layout_constraintStart_toStartOf="@+id/detail_exercise_settings_txt_type"
                app:layout_constraintTop_toBottomOf="@+id/detail_exercise_settings_txt_type"
                app:setData="@{detailExerciseSettingsViewModel.listWorkoutType}"
                app:setSelectedData="@={detailExerciseSettingsViewModel.workoutType}"
                />

        <TextView
            android:id="@+id/detail_exercise_settings_txt_title_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/details_exercise_title_series"
            app:layout_constraintStart_toStartOf="@+id/detail_exercise_settings_edit_name"
            app:layout_constraintTop_toBottomOf="@+id/detail_exercise_settings_edit_name" />

        <TextView
            android:id="@+id/detail_exercise_settings_txt_title_rep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/details_exercise_title_rep"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/detail_exercise_settings_edit_name" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="202dp" />

        <Spinner
            android:id="@+id/detail_exercise_settings_spinner_series"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_exercise_settings_spinner_reps"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/detail_exercise_settings_txt_title_series"
            app:layout_constraintTop_toBottomOf="@+id/detail_exercise_settings_txt_title_series"
            app:setData="@{detailExerciseSettingsViewModel.listSet}"
            app:setSelectedData="@={detailExerciseSettingsViewModel.setValue}"/>

        <Spinner
            android:id="@+id/detail_exercise_settings_spinner_reps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/detail_exercise_settings_edit_name"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/detail_exercise_settings_txt_title_rep"
            app:setData="@{detailExerciseSettingsViewModel.listReps}"
            app:setSelectedData="@={detailExerciseSettingsViewModel.repValue}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>